--- a/env.example
+++ b/env.example
@@ -9,11 +9,11 @@ DB_NAME=elivo_contacts
 DB_PORT=3306
 
 # Configuración de Base de Datos PostgreSQL
-# DB_HOST=localhost
-# DB_USER=postgres
-# DB_PASSWORD=tu_password_postgres
-# DB_NAME=elivo_contacts
-# DB_PORT=5432
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=135792468
+DB_NAME=elivo_contacts
+DB_PORT=5432
 
 # Configuración de MongoDB
 # MONGODB_URI=mongodb://localhost:27017
@@ -25,3 +25,8 @@ EMAIL_PORT=587
 EMAIL_USER=tu_email@gmail.com
 EMAIL_PASS=tu_password_email
 EMAIL_FROM=tu_email@gmail.com
+
+# Configuración de Stripe (para pagos)
+STRIPE_SECRET_KEY=sk_test_tu_clave_secreta_de_stripe
+STRIPE_PUBLISHABLE_KEY=pk_test_tu_clave_publica_de_stripe
+STRIPE_WEBHOOK_SECRET=whsec_tu_webhook_secret_de_stripe
