--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node backend/server-no-db.cjs",
+    "start:postgresql": "node backend/server.cjs",
+    "setup:db": "node backend/setup-db.cjs",
+    "test:api": "node scripts/test-contact-api.js",
+    "test:tienda": "node scripts/test-tienda-api.js",
+    "view:contacts": "node scripts/view-contacts.js",
+    "check:status": "node scripts/check-status.cjs",
+    "start:dev": "concurrently \"npm run start\" \"npm run dev\"",
+    "start:dev:postgresql": "concurrently \"npm run start:postgresql\" \"npm run dev\""
   },
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "framer-motion": "^10.16.4",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^9.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -32,6 +45,3 @@
     "vite": "^4.4.5"
   }
 }
-
-
-
